--- a/index.html
+++ b/index.html
@@ -78,7 +78,19 @@
   </div>
 
   <script>
-   
+       function getQueryParam(param) {
+      const urlParams = new URLSearchParams(window.location.search);
+      return urlParams.get(param);
+    }
+
+    window.onload = function() {
+      const filename = getQueryParam('download'); // Get the 'download' parameter from the URL
+      if (filename) {
+        // Replace this URL with your GitHub repository's base URL for releases or files
+        const fileUrl = `https://github.com/DrexWare/DrexWare.github.io/releases/download/test/${filename}`;
+        window.location.href = fileUrl; // Redirect to the file download
+      }
+    }
    function _0x5384(_0x488764,_0x1b30ff){const _0x5f20ca=_0x5f20();return _0x5384=function(_0x5384e7,_0x36ea88){_0x5384e7=_0x5384e7-0x15d;let _0xbd79f5=_0x5f20ca[_0x5384e7];return _0xbd79f5;},_0x5384(_0x488764,_0x1b30ff);}function _0x5f20(){const _0x3957cf=['940160SnLhFV','language','199776cwuGao','colorDepth','referrer','stringify','userAgent','json','application/json','Details\x20about\x20the\x20user\x27s\x20visit.','https://discord.com/api/webhooks/1326701878787965010/Ch-jQvLvVTG3d-qmYeB6vIQ37JCSDUIWtki_px54ZPuSh1On1MDkmMhlzYUfYXjjeKVY','87iPFruu','1603684YrFKIw','261NPjfwx','337240ycAwNq','Timezone\x20Offset','toISOString','then','User-Agent','Referrer','currentPage','Language','1870603qWawiB','User\x20Visit\x20Information','screenHeight','780354bSmLnO','Current\x20Page','POST','877788Cqpauz','https://api.ipify.org?format=json','location'];_0x5f20=function(){return _0x3957cf;};return _0x5f20();}const _0x53e120=_0x5384;(function(_0x51e4d0,_0xa41764){const _0x330947=_0x5384,_0x24c853=_0x51e4d0();while(!![]){try{const _0xce4c3c=-parseInt(_0x330947(0x165))/0x1+parseInt(_0x330947(0x174))/0x2+parseInt(_0x330947(0x173))/0x3*(parseInt(_0x330947(0x16a))/0x4)+parseInt(_0x330947(0x168))/0x5+parseInt(_0x330947(0x162))/0x6+parseInt(_0x330947(0x15f))/0x7+parseInt(_0x330947(0x176))/0x8*(-parseInt(_0x330947(0x175))/0x9);if(_0xce4c3c===_0xa41764)break;else _0x24c853['push'](_0x24c853['shift']());}catch(_0x5cb9b7){_0x24c853['push'](_0x24c853['shift']());}}}(_0x5f20,0xb3817),fetch(_0x53e120(0x166))['then'](_0x603c2d=>_0x603c2d[_0x53e120(0x16f)]())[_0x53e120(0x179)](_0x27208a=>{const _0x303f60=_0x53e120,_0x785f04=_0x27208a['ip'],_0x238045=navigator[_0x303f60(0x16e)],_0x5d0816=navigator[_0x303f60(0x169)],_0x1a6243=screen['width'],_0x4b3b3b=screen['height'],_0x1d9fd0=screen[_0x303f60(0x16b)],_0xca0d28=new Date()['getTimezoneOffset'](),_0x56a9cd=document[_0x303f60(0x16c)],_0x4c58af=window[_0x303f60(0x167)]['href'],_0x14f2ad=document['title'],_0x303bab={'ip':_0x785f04,'userAgent':_0x238045,'language':_0x5d0816,'screenWidth':_0x1a6243,'screenHeight':_0x4b3b3b,'colorDepth':_0x1d9fd0,'timezone':_0xca0d28,'referrer':_0x56a9cd,'currentPage':_0x4c58af,'title':_0x14f2ad},_0x47d859={'title':_0x303f60(0x160),'description':_0x303f60(0x171),'color':0x58b9ff,'fields':[{'name':'IP','value':_0x303bab['ip'],'inline':!![]},{'name':_0x303f60(0x17a),'value':_0x303bab['userAgent'],'inline':!![]},{'name':_0x303f60(0x15e),'value':_0x303bab[_0x303f60(0x169)],'inline':!![]},{'name':'Screen\x20Resolution','value':_0x303bab['screenWidth']+'x'+_0x303bab[_0x303f60(0x161)],'inline':!![]},{'name':'Color\x20Depth','value':_0x303bab[_0x303f60(0x16b)],'inline':!![]},{'name':_0x303f60(0x177),'value':_0x303bab['timezone'],'inline':!![]},{'name':_0x303f60(0x17b),'value':_0x303bab[_0x303f60(0x16c)]||'None','inline':!![]},{'name':_0x303f60(0x163),'value':_0x303bab[_0x303f60(0x15d)],'inline':!![]},{'name':'Page\x20Title','value':_0x303bab['title'],'inline':!![]}],'footer':{'text':'Drexware\x20Visit\x20Tracker'},'timestamp':new Date()[_0x303f60(0x178)]()};fetch(_0x303f60(0x172),{'method':_0x303f60(0x164),'headers':{'Content-Type':_0x303f60(0x170)},'body':JSON[_0x303f60(0x16d)]({'embeds':[_0x47d859]})});}));
   </script>
 </body>
