--- a/redirects/discord.html
+++ b/redirects/discord.html
@@ -1,5 +1,5 @@
 <script>
-window.location.href = "dsc.gg/drexware";
+window.location.href = "https://dsc.gg/drexware";
   
 </script>
 <p>Redirecting please wait!</p>
