--- a/discord.html
+++ b/discord.html
@@ -1,4 +1,4 @@
 <script>
 
-  window.location.href = "https://dsc.gg/drexware"; // Redirect to the file download
+  window.location.href = "/redirects/discord.html"; // Redirect to the file download
 </script>
