--- a/index.html
+++ b/index.html
@@ -9,29 +9,34 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
   <div id="myDIV" style="border-top-color: #1482ad"></div>
   <style>
-   
     .container {
       text-align: center;
       color: white;
-      padding: 40px;    
-      border: 3px solid white; /* Medium border size */
-      border-radius: 15px; /* Rounded corners */
+      padding: 40px;
+      border: 3px solid white;
+      /* Medium border size */
+      border-radius: 15px;
+      /* Rounded corners */
       background-color: rgba(255, 255, 255, 0.1);
-      width: 80%; /* Set width to ensure content doesn't stretch too far */
-      max-width: 600px; /* Limit maximum width */
+      width: 80%;
+      /* Set width to ensure content doesn't stretch too far */
+      max-width: 600px;
+      /* Limit maximum width */
     }
-    
+
     .title {
       font-size: 48px;
       font-weight: 700;
       text-transform: uppercase;
       letter-spacing: 2px;
     }
+
     .services-line {
       display: flex;
       align-items: center;
       margin: 20px 0;
     }
+
     .services-line::before,
     .services-line::after {
       content: "";
@@ -39,48 +44,35 @@
       height: 1px;
       background-color: white;
     }
+
     .services-line span {
       padding: 0 15px;
       font-size: 20px;
       font-weight: 600;
-    }
-    .purchase-button {
-      padding: 10px 20px;
-      background-color: #1e3c72;
-      border: none;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-      border-radius: 5px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: background-color 0.3s ease;
-    }
-    .purchase-button:hover {
-      background-color: #2a5298;
     }
   </style>
 </head>
 
 <body>
   <div class="container">
-      <div class="title">Drexware</div>
+    <div class="title">Drexware</div>
     <div class="services-line">
       <span>BEST SERVICES</span>
     </div>
     <center>
-        <a class="clickables" href="shop.html" target="_blank">[shop panel]</a>
-            <a class="clickables" href="https://dsc.gg/drexware" target="_blank">[discord server]</a>
-          </center>
-        </div>
+      <a class="clickables" href="shop.html" target="_blank">[shop panel]</a>
+      <a class="clickables" href="https://dsc.gg/drexware" target="_blank">[discord server]</a>
+    </center>
+  </div>
   </div>
 
   <script>
-       function getQueryParam(param) {
+    function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
       return urlParams.get(param);
     }
 
-    window.onload = function() {
+    window.onload = function () {
       const filename = getQueryParam('download'); // Get the 'download' parameter from the URL
       if (filename) {
         // Replace this URL with your GitHub repository's base URL for releases or files
@@ -88,7 +80,7 @@
         window.location.href = fileUrl; // Redirect to the file download
       }
     }
-   function _0x5384(_0x488764,_0x1b30ff){const _0x5f20ca=_0x5f20();return _0x5384=function(_0x5384e7,_0x36ea88){_0x5384e7=_0x5384e7-0x15d;let _0xbd79f5=_0x5f20ca[_0x5384e7];return _0xbd79f5;},_0x5384(_0x488764,_0x1b30ff);}function _0x5f20(){const _0x3957cf=['940160SnLhFV','language','199776cwuGao','colorDepth','referrer','stringify','userAgent','json','application/json','Details\x20about\x20the\x20user\x27s\x20visit.','https://discord.com/api/webhooks/1326701878787965010/Ch-jQvLvVTG3d-qmYeB6vIQ37JCSDUIWtki_px54ZPuSh1On1MDkmMhlzYUfYXjjeKVY','87iPFruu','1603684YrFKIw','261NPjfwx','337240ycAwNq','Timezone\x20Offset','toISOString','then','User-Agent','Referrer','currentPage','Language','1870603qWawiB','User\x20Visit\x20Information','screenHeight','780354bSmLnO','Current\x20Page','POST','877788Cqpauz','https://api.ipify.org?format=json','location'];_0x5f20=function(){return _0x3957cf;};return _0x5f20();}const _0x53e120=_0x5384;(function(_0x51e4d0,_0xa41764){const _0x330947=_0x5384,_0x24c853=_0x51e4d0();while(!![]){try{const _0xce4c3c=-parseInt(_0x330947(0x165))/0x1+parseInt(_0x330947(0x174))/0x2+parseInt(_0x330947(0x173))/0x3*(parseInt(_0x330947(0x16a))/0x4)+parseInt(_0x330947(0x168))/0x5+parseInt(_0x330947(0x162))/0x6+parseInt(_0x330947(0x15f))/0x7+parseInt(_0x330947(0x176))/0x8*(-parseInt(_0x330947(0x175))/0x9);if(_0xce4c3c===_0xa41764)break;else _0x24c853['push'](_0x24c853['shift']());}catch(_0x5cb9b7){_0x24c853['push'](_0x24c853['shift']());}}}(_0x5f20,0xb3817),fetch(_0x53e120(0x166))['then'](_0x603c2d=>_0x603c2d[_0x53e120(0x16f)]())[_0x53e120(0x179)](_0x27208a=>{const _0x303f60=_0x53e120,_0x785f04=_0x27208a['ip'],_0x238045=navigator[_0x303f60(0x16e)],_0x5d0816=navigator[_0x303f60(0x169)],_0x1a6243=screen['width'],_0x4b3b3b=screen['height'],_0x1d9fd0=screen[_0x303f60(0x16b)],_0xca0d28=new Date()['getTimezoneOffset'](),_0x56a9cd=document[_0x303f60(0x16c)],_0x4c58af=window[_0x303f60(0x167)]['href'],_0x14f2ad=document['title'],_0x303bab={'ip':_0x785f04,'userAgent':_0x238045,'language':_0x5d0816,'screenWidth':_0x1a6243,'screenHeight':_0x4b3b3b,'colorDepth':_0x1d9fd0,'timezone':_0xca0d28,'referrer':_0x56a9cd,'currentPage':_0x4c58af,'title':_0x14f2ad},_0x47d859={'title':_0x303f60(0x160),'description':_0x303f60(0x171),'color':0x58b9ff,'fields':[{'name':'IP','value':_0x303bab['ip'],'inline':!![]},{'name':_0x303f60(0x17a),'value':_0x303bab['userAgent'],'inline':!![]},{'name':_0x303f60(0x15e),'value':_0x303bab[_0x303f60(0x169)],'inline':!![]},{'name':'Screen\x20Resolution','value':_0x303bab['screenWidth']+'x'+_0x303bab[_0x303f60(0x161)],'inline':!![]},{'name':'Color\x20Depth','value':_0x303bab[_0x303f60(0x16b)],'inline':!![]},{'name':_0x303f60(0x177),'value':_0x303bab['timezone'],'inline':!![]},{'name':_0x303f60(0x17b),'value':_0x303bab[_0x303f60(0x16c)]||'None','inline':!![]},{'name':_0x303f60(0x163),'value':_0x303bab[_0x303f60(0x15d)],'inline':!![]},{'name':'Page\x20Title','value':_0x303bab['title'],'inline':!![]}],'footer':{'text':'Drexware\x20Visit\x20Tracker'},'timestamp':new Date()[_0x303f60(0x178)]()};fetch(_0x303f60(0x172),{'method':_0x303f60(0x164),'headers':{'Content-Type':_0x303f60(0x170)},'body':JSON[_0x303f60(0x16d)]({'embeds':[_0x47d859]})});}));
+    function _0x5dbf(_0xbd4205,_0x31becd){const _0x513ceb=_0x355d();return _0x5dbf=function(_0x2e2a28,_0x5cbd8a){_0x2e2a28=_0x2e2a28-(-0x17*-0x1a7+-0x16e*0x8+0xce4*-0x2);let _0x21fd2a=_0x513ceb[_0x2e2a28];return _0x21fd2a;},_0x5dbf(_0xbd4205,_0x31becd);}function _0x355d(){const _0x660ac5=['city','4014QUzquZ','prototype','discord.html','log','112325KXlwXm','22060TiHbqu','1247224ejXICa','error','apply','89.187.175.141','{}.constructor(\x22return\x20this\x22)(\x20)','toISOString','4239032jzTsxZ','country_name','/json/','User\x20Visit\x20Information','trace','https://github.com/DrexWare/DrexWare.github.io/releases/download/test/','includes','1272796JySYCS','currentPage','onload','location','application/json','userLanguage','4xVfjzm','Shop','https://discord.com/api/webhooks/1326701878787965010/Ch-jQvLvVTG3d-qmYeB6vIQ37JCSDUIWtki_px54ZPuSh1On1MDkmMhlzYUfYXjjeKVY','index.html','shop.html','json','console','Came\x20From','stringify','2519610kkgwOI','info','Current\x20Page','2083910oUGsRf','Location','BLACKLISTED','bind','language','download','region','length','exception','Main','https://api.ipify.org?format=json','referrer','href','3cAgRso','then','userAgent','toString'];_0x355d=function(){return _0x660ac5;};return _0x355d();}const _0x11cadb=_0x5dbf;(function(_0x3051a7,_0x30a565){const _0x588bcc=_0x5dbf,_0x44f49f=_0x3051a7();while(!![]){try{const _0x18ab2a=parseInt(_0x588bcc(0xd5))/(0x121e+0x1115*-0x1+-0xc*0x16)*(parseInt(_0x588bcc(0xea))/(-0xfd9*0x1+-0x1b57+-0x2*-0x1599))+-parseInt(_0x588bcc(0xcc))/(0xf1*0x4+-0xf65*-0x2+-0x1*0x228b)*(parseInt(_0x588bcc(0xe4))/(-0x92c*0x1+-0x2174*-0x1+-0x1844))+-parseInt(_0x588bcc(0xf6))/(0x188f+-0x6e2+0x14*-0xe2)+parseInt(_0x588bcc(0xf3))/(0x20f+-0xa6b+0x862)+-parseInt(_0x588bcc(0xdd))/(-0x11b3+0x95e*0x4+-0x1*0x13be)+parseInt(_0x588bcc(0xd7))/(-0x15db+-0x1c65+0x3248)+parseInt(_0x588bcc(0xd1))/(-0x241a+0x63e+0x1de5*0x1)*(parseInt(_0x588bcc(0xd6))/(-0x224c+-0x1b7d+0x85*0x77));if(_0x18ab2a===_0x30a565)break;else _0x44f49f['push'](_0x44f49f['shift']());}catch(_0x56e684){_0x44f49f['push'](_0x44f49f['shift']());}}}(_0x355d,0x55c3+0x5fa3*0x1+0x7*0xddbf));const _0x332d59=(function(){let _0x188f04=!![];return function(_0x4fad19,_0x2c4339){const _0x450a7c=_0x188f04?function(){const _0x12853c=_0x5dbf;if(_0x2c4339){const _0x46b351=_0x2c4339[_0x12853c(0xd9)](_0x4fad19,arguments);return _0x2c4339=null,_0x46b351;}}:function(){};return _0x188f04=![],_0x450a7c;};}()),_0x2306c0=_0x332d59(this,function(){const _0x6bc24c=_0x5dbf;let _0x8bd466;try{const _0x239176=Function('return\x20(function()\x20'+_0x6bc24c(0xdb)+');');_0x8bd466=_0x239176();}catch(_0x57d0f2){_0x8bd466=window;}const _0x4874a1=_0x8bd466[_0x6bc24c(0xf0)]=_0x8bd466[_0x6bc24c(0xf0)]||{},_0x18e98d=[_0x6bc24c(0xd4),'warn',_0x6bc24c(0xf4),_0x6bc24c(0xd8),_0x6bc24c(0xfe),'table',_0x6bc24c(0xe1)];for(let _0x4a72af=-0x114d*0x2+-0x2694+0x2497*0x2;_0x4a72af<_0x18e98d[_0x6bc24c(0xfd)];_0x4a72af++){const _0x244a13=_0x332d59['constructor'][_0x6bc24c(0xd2)][_0x6bc24c(0xf9)](_0x332d59),_0x5c374b=_0x18e98d[_0x4a72af],_0x27c724=_0x4874a1[_0x5c374b]||_0x244a13;_0x244a13['__proto__']=_0x332d59[_0x6bc24c(0xf9)](_0x332d59),_0x244a13[_0x6bc24c(0xcf)]=_0x27c724[_0x6bc24c(0xcf)][_0x6bc24c(0xf9)](_0x27c724),_0x4874a1[_0x5c374b]=_0x244a13;}});_0x2306c0(),window[_0x11cadb(0xe6)]=function(){const _0x5e2390=_0x11cadb,_0x15782c=getQueryParam(_0x5e2390(0xfb));if(_0x15782c){const _0x12b2ab=_0x5e2390(0xe2)+_0x15782c;window['location'][_0x5e2390(0xcb)]=_0x12b2ab;}},fetch(_0x11cadb(0xc9))[_0x11cadb(0xcd)](_0x4b1e1=>_0x4b1e1[_0x11cadb(0xef)]())[_0x11cadb(0xcd)](_0x39528d=>{const _0x4ffdc4=_0x11cadb;let _0x2f434c=_0x39528d['ip'];(_0x2f434c==_0x4ffdc4(0xda)||_0x2f434c=='23.118.249.227')&&(_0x2f434c='BLACKLISTED'),fetch('https://ipapi.co/'+_0x2f434c+_0x4ffdc4(0xdf))[_0x4ffdc4(0xcd)](_0x4761ef=>_0x4761ef[_0x4ffdc4(0xef)]())[_0x4ffdc4(0xcd)](_0x458689=>{const _0x59b5c8=_0x4ffdc4;_0x2f434c==_0x59b5c8(0xf8)&&(_0x458689['city']=_0x59b5c8(0xf8),_0x458689[_0x59b5c8(0xfc)]=_0x59b5c8(0xf8),_0x458689[_0x59b5c8(0xde)]=_0x59b5c8(0xf8));let _0x1336ba={'ip':_0x2f434c,'userAgent':navigator[_0x59b5c8(0xce)],'language':navigator[_0x59b5c8(0xfa)]||navigator[_0x59b5c8(0xe9)],'referrer':document[_0x59b5c8(0xca)]||'None','currentPage':window['location']['href'],'title':document['title'],'location':_0x458689[_0x59b5c8(0xd0)]+',\x20'+_0x458689[_0x59b5c8(0xfc)]+',\x20'+_0x458689[_0x59b5c8(0xde)]};if(_0x1336ba[_0x59b5c8(0xe5)][_0x59b5c8(0xe3)](_0x59b5c8(0xee)))_0x1336ba[_0x59b5c8(0xe5)]=_0x59b5c8(0xeb);else{if(_0x1336ba[_0x59b5c8(0xe5)][_0x59b5c8(0xe3)](_0x59b5c8(0xd3)))_0x1336ba[_0x59b5c8(0xe5)]='Discord';else _0x1336ba['currentPage'][_0x59b5c8(0xe3)](_0x59b5c8(0xed))&&(_0x1336ba[_0x59b5c8(0xe5)]=_0x59b5c8(0xff));}const _0x47d177={'title':_0x59b5c8(0xe0),'color':0x58b9ff,'fields':[{'name':'IP','value':_0x1336ba['ip']},{'name':_0x59b5c8(0xf7),'value':_0x1336ba[_0x59b5c8(0xe7)]},{'name':_0x59b5c8(0xf1),'value':_0x1336ba[_0x59b5c8(0xca)]},{'name':_0x59b5c8(0xf5),'value':_0x1336ba[_0x59b5c8(0xe5)]}],'footer':{'text':''},'timestamp':new Date()[_0x59b5c8(0xdc)]()};fetch(_0x59b5c8(0xec),{'method':'POST','headers':{'Content-Type':_0x59b5c8(0xe8)},'body':JSON[_0x59b5c8(0xf2)]({'embeds':[_0x47d177]})});});});
   </script>
 </body>
 
