--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Drexware Website</title>
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/stylesheet.css" />
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
+
   <div id="myDIV" style="border-top-color: #1482ad"></div>
   <style>
     .container {
@@ -54,6 +55,8 @@
 </head>
 
 <body>
+ 
+  <canvas id="falling-dots"></canvas>
   <div class="container">
     <div class="title">Drexware</div>
     <div class="services-line">
@@ -65,7 +68,7 @@
     </center>
   </div>
   </div>
-
+  <script type="text/javascript" src="assets/javascript/app.js"></script>
   <script>
     function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
