--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     </div>
     <center>
       <a class="clickables" href="shop.html" target="_blank">[shop panel]</a>
+      <a class="clickables" href="free.html" target="_blank">[free]</a>
       <a class="clickables" href="https://dsc.gg/drexware" target="_blank">[discord server]</a>
     </center>
   </div>
