--- a/free.html
+++ b/free.html
@@ -13,7 +13,7 @@
   <meta property="og:url" content="index.html" />
   <meta property="og:image" content="assets/icons/vavy.png" />
   <meta itemprop="name" content="drexware.gg" />
-  <meta itemprop="description" content="Drexware - Awesome Cheats" />
+  <meta itemprop="description" content="Drexware - Best cheats on the market" />
   <meta itemprop="image" content="assets/icons/vavy.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
