--- a/redirects/youtube.html
+++ b/redirects/youtube.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <title>drexware.gg</title>
+  <meta charset="UTF-8" />
+  <meta name="description" content="Drexware - Awesome Cheats" />
+  <meta name="keywords" content="drexware.gg, vavy, sirvavy" />
+  <meta name="author" content="drexware.gg" />
+  <meta property="og:type" content="site" />
+  <meta property="og:title" content="drexware.gg" />
+  <meta property="og:description" content="Drexware - Awesome Cheats" />
+  <meta property="og:url" content="index.html" />
+  <meta property="og:image" content="assets/icons/vavy.png" />
+  <meta itemprop="name" content="drexware.gg" />
+  <meta itemprop="description" content="Drexware - Awesome Cheats" />
+  <meta itemprop="image" content="assets/icons/vavy.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+
+  <link rel="stylesheet" type="text/css" href="../assets/stylesheets/stylesheet.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://univevip.github.io/cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
+
+  <div id="myDIV" style="border-top-color: #1482ad"></div>
+</head>
+
+<body>
+  <canvas id="falling-dots"></canvas>
+  <div class="container" style="width: 20rem;">
+   
+    <div class="card-body">
+      <center>
+        <h4>Redirecing please wait</h4>
+      </center>
+
+    
+    </div>
+  </div>
+
+  <script type="text/javascript" src="assets/javascript/lib/jquery-3.1.1.min.js"></script>
+  <script type="text/javascript" src="assets/javascript/lib/jquery.marquee.min.js"></script>
+  <script type="text/javascript" src="assets/javascript/lib/jquery.cookie.min.js"></script>
+  <script type="text/javascript" src="../assets/javascript/app.js"></script>
+
+  <script>
+    function getQueryParam(param) {
+      const urlParams = new URLSearchParams(window.location.search);
+      return urlParams.get(param);
+    }
+
+  </script>
+</body>
+
+</html>
