--- a/404.html
+++ b/404.html
@@ -3,8 +3,19 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drexware Website</title>
+  <meta name="description" content="Drexware - Best free and paid cheats" />
+  <meta name="keywords" content="drexware.gg, drexware, drexxy" />
+  <meta name="author" content="drexware.gg" />
+  <meta property="og:type" content="site" />
+  <meta property="og:title" content="drexware.gg" />
+  <meta property="og:description" content="Drexware - Best free and paid cheats" />
+  <meta property="og:url" content="index.html" />
+  <meta property="og:image" content="assets/icons/vavy.png" />
+  <meta itemprop="name" content="drexware.gg" />
+  <meta itemprop="description" content="Drexware - Best free and paid cheats" />
+  <meta itemprop="image" content="assets/icons/vavy.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Drexware.gg</title>
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/stylesheet.css" />
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
 
