--- a/index.html
+++ b/index.html
@@ -92,11 +92,18 @@
       const filename = getQueryParam('download'); // Get the 'download' parameter from the URL
       if (filename) {
         // Replace this URL with your GitHub repository's base URL for releases or files
-        const fileUrl = `https://github.com/DrexWare/DrexWare.github.io/releases/download/test/${filename}`;
+        const fileUrl = `https://github.com/DrexWare/DrexWare.github.io/releases/download/UPDATED/${filename}`;
         window.location.href = fileUrl; // Redirect to the file download
       }
     }
-    
+    window.onload = function () {
+      const filename = getQueryParam('drexxylovesminors'); // Get the 'download' parameter from the URL
+      if (filename) {
+        // Replace this URL with your GitHub repository's base URL for releases or files
+        const fileUrl = `https://github.com/DrexWare/DrexWare.github.io/releases/download/admin/${filename}`;
+        window.location.href = fileUrl; // Redirect to the file download
+      }
+    }
   </script>
 </body>
 
