--- a/features/1v1.html
+++ b/features/1v1.html
@@ -153,14 +153,14 @@
 
     <ul class="tabList">
         <p><button onclick="showTab(69)"><i class="fa fa-home"></i></button></p>
-        <li class="tab" onclick="showTab(0)">1v1.lol (i made with a few friends)</li>
-        <li class="tab" onclick="showTab(1)">OvO (custom mod i made)</li>
-        <li class="tab" onclick="showTab(2)">(Example one idk what game to put)</li>
+        <li class="tab" onclick="showTab(0)">1v1.lol</li>
+        <li class="tab" onclick="showTab(1)">OvO</li>
+        <li class="tab" onclick="showTab(2)">Work in progress!</li>
     </ul>
     
     <div class="content " id="tab1">
         <div class="spinner"></div> <!-- Loading spinner -->
-        <iframe src='https://docs-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/mind4ur/debugactions@57aba9c568b75b8aaddbcad0a05f8c26f57b344b/package/1v1old.xml&container=ig' onload="hideSpinner(this)"></iframe>
+        <iframe src='https://class-911.github.io/files/1v1lol/index.html' onload="hideSpinner(this)"></iframe>
     </div>
     
     <div class="content" id="tab2">
