dsc.gg/drexwaregg

--- a/features/1v1.html
+++ b/features/1v1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>History Studying - NATIVE AMERICANS</title>
+    <title>dsc.gg/drexwaregg on top fr!</title>
     <style>
     
         
@@ -221,11 +221,8 @@
     </script>
 
     <div class="card glow center">
-        <pre><code class="language-javascript">
-function Hello(){
-    console.log("Hello welcome to drexware games :)";
-}
-</code></pre>
+        if you enjoy this please let me know in the vouches chanel!
+        i made this for yall!
                 <a  href= " https://youtube.com/@drexxyyy " target="_blank"><p><button><i class="fa fa-youtube-play brandico glow center"></i></button></p>
                     </a>
 
