--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <a class="clickables" href="shop.html" target="_blank">[shop panel]</a>
       <a class="clickables" href="free.html" target="_blank">[free]</a>
       <a class="clickables" href="./features/features.html" target="_blank">[features]</a>
-      <a class="clickables" href="https://dsc.gg/drexware" target="_blank">[discord server]</a>
+      <a class="clickables" href="https://dsc.gg/drexwaregg" target="_blank">[discord server]</a>
     </center>
   </div>
   </div>
