--- a/1v1.html
+++ b/1v1.html
@@ -1,1 +1,1 @@
-<iframe src='https://class-911.github.io/files/1v1lol/index.html' onload="hideSpinner(this)"></iframe>
+<iframe src='https://class-911.github.io/files/1v1lol/index.html'frameBorder="0" width="100%" height="100%" scrolling="auto"></iframe> ></iframe>
