--- a/index.html
+++ b/index.html
@@ -57,16 +57,8 @@
  
   <canvas id="falling-dots"></canvas>
   <div class="container">
-    <div class="title">Drexware</div>
-    <div class="services-line">
-      <span>BEST SERVICES</span>
-    </div>
-    <center>
-      <a class="clickables" href="shop.html" target="_blank">[shop panel]</a>
-      <a class="clickables" href="free.html" target="_blank">[free]</a>
-      <a class="clickables" href="./features/features.html" target="_blank">[features]</a>
-      <a class="clickables" href="https://dsc.gg/drexwaregg" target="_blank">[discord server]</a>
-    </center>
+    <div class="title">C L O U D</div>
+   
   </div>
   </div>
   <script type="text/javascript" src="assets/javascript/app.js"></script>
