--- a/discord/index.html
+++ b/discord/index.html
@@ -56,7 +56,7 @@
             <div class="redirect-text">
                 <p>Redirecting to Discord<span class="dots"></span></p>
                 <noscript>
-                    <p>If you are not redirected automatically, <a href="https://discord.gg/42PXqKvwxq" style="color: var(--primary-color)">click here</a></p>
+                    <p>If you are not redirected automatically, <a href="https://discord.gg/dyq7bNVz5B" style="color: var(--primary-color)">click here</a></p>
                 </noscript>
             </div>
         </section>
@@ -69,7 +69,7 @@
             
             // Delay redirect to show the loading animation
             setTimeout(() => {
-                window.location.href = 'https://discord.gg/42PXqKvwxq';
+                window.location.href = 'https://discord.gg/dyq7bNVz5B';
             }, 500);
         });
     </script>
