--- a/discord/index.html
+++ b/discord/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Advantage Discord">
     <meta property="og:description" content="The Discord for Advantage">
-    <meta property="og:image" content="/assets/discord.png">
+    <meta property="og:image" content="assets/discord.png">
     <meta property="og:url" content="https://drexware.github.io">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Advantage discord">
     <meta name="twitter:description" content="The Discord for Advantage">
-    <meta name="twitter:image" content="/assets/discord.png">
+    <meta name="twitter:image" content="assets/discord.png">
     <meta name="description" content="The Discord for Advantage">
     <meta name="keywords" content="minecraft, glide client, Soar client">
     <meta name="author" content="Advantage Discord">
     <meta name="theme-color" content="#6603fc">
     <title>Advantage - Discord</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/svg+xml" href="/assets/Branding/logo.png">
+    <link rel="icon" type="image/svg+xml" href="assets/branding/logo.png">
     <style>
         .redirect-text {
             display: flex;
@@ -46,7 +46,7 @@
 <body>
     <div class="loader-wrapper">
         <div class="loader">
-            <img src="/assets/Branding/logo.png" alt="Advantage Logo">
+            <img src="assets/branding/logo.png" alt="Advantage Logo">
         </div>
     </div>
 
