--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:title" content="Advantage - Modern 1.21 Minecraft Client">
     <meta property="og:description"
         content="The ultimate open-source Minecraft 1.21 PvP client with cross-platform support and quality of life improvements. Download now for Windows, macOS, and Linux.">
-    <meta property="og:image" content="https://drexware.github.io/Branding/banner.png">
+    <meta property="og:image" content="https://drexware.github.io/assets/Branding/banner.png">
     <meta property="og:image:alt" content="Advantage Logo - Minecraft PvP Client">
     <meta property="og:url" content="https://drexware.github.io">
     <meta property="og:site_name" content="Advantage">
@@ -35,7 +35,7 @@
     <meta name="twitter:title" content="Advantage - Modern Minecraft 1.21 PvP Client">
     <meta name="twitter:description"
         content="The ultimate open-source Minecraft 1.21 PvP client with cross-platform support and quality of life improvements.">
-    <meta name="twitter:image" content="https://drexware.github.io/Branding/banner.png">
+    <meta name="twitter:image" content="https://drexware.github.io/assets/Branding/banner.png">
     <meta name="twitter:image:alt" content="Advantage Logo - Minecraft PvP Client">
 
     <!-- Theme and Brand Colors -->
@@ -55,7 +55,7 @@
     <meta name="google-site-verification" content="r28lqHeGOGV7C6jk6VrlYJkrt1-w8X4VbjLqQzyf6ME" />
 
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/svg+xml" href="https://drexware.github.io/Branding/glideicon.svg">
+    <link rel="icon" type="image/svg+xml" href="https://drexware.github.io/assets/Branding/logo.png">
 
 
     <!-- FIXED JSON-LD Structured Data -->
@@ -111,7 +111,7 @@
             "@type": "Organization",
             "name": "Advantage",
             "url": "https://drexware.github.io",
-            "logo": "https://drexware.github.io/Branding/glideicon.svg",
+            "logo": "https://drexware.github.io/assets/Branding/logo.png",
             "foundingDate": "2024",
             "description": "Open-source Minecraft client development team",
             "sameAs": [
@@ -182,14 +182,14 @@
 <body>
     <div class="loader-wrapper">
         <div class="loader">
-            <img src="https://drexware.github.io/Branding/glideicon.svg" alt="Advantage Logo">
+            <img src="https://drexware.github.io/assets/Branding/logo.png" alt="Advantage Logo">
         </div>
     </div>
 
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="https://drexware.github.io/Branding/glideicon.svg" alt="Advantage Logo">
+                <img src="https://drexware.github.io/assets/Branding/logo.png" alt="Advantage Logo">
             </div>
             <div class="hamburger">
                 <span></span>
@@ -445,8 +445,6 @@
                     href="https://github.com/Advantage/" target="_blank">GitHub</a> | <a href="/discord"
                     target="_blank">Discord</a></p>
             <p>Need our brand assets? <a href="https://drexware.github.io/data/branding/" target="_blank">Click
-                    here!</a></p>
-            <p>Want to contact us? <a href="https://help.Advantage.com/articles/contactus/" target="_blank">Click
                     here!</a></p>
         </div>
     </footer>
