--- a/spotifytutorial/index.html
+++ b/spotifytutorial/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Advantage - Spotify Integration Guide">
     <meta property="og:description" content="Learn how to set up Spotify integration with Advantage">
-    <meta property="og:image" content="https://drexware.github.io/Branding/banner.png">
+    <meta property="og:image" content="https://drexware.github.io/assets/Branding/banner.png">
     <meta property="og:url" content="https://drexware.github.io/spotifyguide">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Advantage - Spotify Integration Guide">
     <meta name="twitter:description" content="Learn how to set up Spotify integration with Advantage">
-    <meta name="twitter:image" content="https://drexware.github.io/Branding/banner.png">
+    <meta name="twitter:image" content="https://drexware.github.io/assets/Branding/banner.png">
     <meta name="description" content="Comprehensive guide to setting up Spotify integration with Advantage">
     <meta name="keywords" content="minecraft, glide client, spotify integration, spotify api">
     <meta name="author" content="Advantage">
     <meta name="theme-color" content="#6603fc">
     <title>Advantage - Spotify Integration Guide</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/svg+xml" href="https://drexware.github.io/Branding/glideicon.svg">
+    <link rel="icon" type="image/svg+xml" href="https://drexware.github.io/assets/Branding/logo.png">
     <style>
         .guide-container {
             max-width: 800px;
@@ -125,7 +125,7 @@
     <header class="header">
         <nav class="navbar">
             <a href="/" class="logo">
-                <img src="https://drexware.github.io/Branding/glideicon.svg" alt="Advantage Logo">
+                <img src="https://drexware.github.io/assets/Branding/logo.png" alt="Advantage Logo">
             </a>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
