--- a/404.html
+++ b/404.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Advantage">
     <meta property="og:description" content="The website for Advantage">
-    <meta property="og:image" content="https://drexware.github.io/Branding/banner.png">
+    <meta property="og:image" content="https://drexware.github.io/assets/branding/banner.png">
     <meta property="og:url" content="https://drexware.github.io">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Advantage">
     <meta name="twitter:description" content="The website for Advantage">
-    <meta name="twitter:image" content="https://drexware.github.io/Branding/banner.png">
+    <meta name="twitter:image" content="https://drexware.github.io/assets/Branding/banner.png">
     <meta name="description" content="The website for Advantage">
     <meta name="keywords" content="minecraft, glide client, Soar client">
     <meta name="author" content="Advantage">
     <meta name="theme-color" content="#6603fc">
     <title>Advantage - 404 Not Found</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/svg+xml" href="https://drexware.github.io/Branding/glideicon.svg">
+    <link rel="icon" type="image/svg+xml" href="https://drexware.github.io/assets/Branding/logo.png">
 </head>
 <body>
     <div class="loader-wrapper">
         <div class="loader">
-            <img src="https://drexware.github.io/Branding/glideicon.svg" alt="Advantage Logo">
+            <img src="https://drexware.github.io/assets/Branding/logo.png" alt="Advantage Logo">
         </div>
     </div>
 
@@ -30,7 +30,7 @@
         <nav class="navbar">
             <div class="logo">
                 <a href="/">
-                    <img src="https://drexware.github.io/Branding/glideicon.svg" alt="Advantage Logo">
+                    <img src="https://drexware.github.io/assets/Branding/logo.png" alt="Advantage Logo">
                 </a>
             </div>
             <div class="hamburger">
