--- a/discord/index.html
+++ b/discord/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#6603fc">
     <title>Advantage - Discord</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/svg+xml" href="https://drexware.github.io/Branding/glideicon.svg">
+    <link rel="icon" type="image/svg+xml" href="https://drexware.github.io/assets/Branding/logo.png">
     <style>
         .redirect-text {
             display: flex;
@@ -46,7 +46,7 @@
 <body>
     <div class="loader-wrapper">
         <div class="loader">
-            <img src="https://drexware.github.io/Branding/glideicon.svg" alt="Advantage Logo">
+            <img src="https://drexware.github.io/assets/Branding/logo.png" alt="Advantage Logo">
         </div>
     </div>
 
@@ -56,7 +56,7 @@
             <div class="redirect-text">
                 <p>Redirecting to Discord<span class="dots"></span></p>
                 <noscript>
-                    <p>If you are not redirected automatically, <a href="https://discord.gg/dyq7bNVz5B" style="color: var(--primary-color)">click here</a></p>
+                    <p>If you are not redirected automatically, <a href="Cloudhttps://discord.gg/dyq7bNVz5B" style="color: var(--primary-color)">click here</a></p>
                 </noscript>
             </div>
         </section>
@@ -69,7 +69,7 @@
             
             // Delay redirect to show the loading animation
             setTimeout(() => {
-                window.location.href = 'https://discord.gg/dyq7bNVz5B';
+                window.location.href = 'Cloudhttps://discord.gg/dyq7bNVz5B';
             }, 500);
         });
     </script>
