--- a/soareol/index.html
+++ b/soareol/index.html
@@ -26,13 +26,13 @@
 
     <title>Advantage - SoarClient 7 End Of Life</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/svg+xml" href="https://drexware.github.io/Branding/glideicon.svg">
+    <link rel="icon" type="image/svg+xml" href="https://drexware.github.io/assets/Branding/logo.png">
 </head>
 
 <body>
     <div class="loader-wrapper">
         <div class="loader">
-            <img src="https://drexware.github.io/Branding/glideicon.svg" alt="Advantage Logo">
+            <img src="https://drexware.github.io/assets/Branding/logo.png" alt="Advantage Logo">
         </div>
     </div>
 
@@ -40,7 +40,7 @@
         <nav class="navbar">
             <div class="logo">
                 <a href="/">
-                    <img src="https://drexware.github.io/Branding/glideicon.svg" alt="Advantage Logo">
+                    <img src="https://drexware.github.io/assets/Branding/logo.png" alt="Advantage Logo">
                 </a>
             </div>
             <div class="hamburger">
