--- a/discord/index.html
+++ b/discord/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#6603fc">
     <title>Advantage - Discord</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/svg+xml" href="https://drexware.github.io/assets/Branding/logo.png">
+    <link rel="icon" type="image/svg+xml" href="/assets/Branding/logo.png">
     <style>
         .redirect-text {
             display: flex;
@@ -46,7 +46,7 @@
 <body>
     <div class="loader-wrapper">
         <div class="loader">
-            <img src="https://drexware.github.io/assets/Branding/logo.png" alt="Advantage Logo">
+            <img src="/assets/Branding/logo.png" alt="Advantage Logo">
         </div>
     </div>
 
