--- a/loading/index.html
+++ b/loading/index.html
@@ -88,7 +88,7 @@
 <body>
     <div class="loader-wrapper">
         <div class="loader">
-            <img src="https://drexware.github.io/assets/Branding/logo.png" alt="Loading...">
+            <img src="/assets/Branding/logo.png" alt="Loading...">
         </div>
     </div>
 </body>
